# volume_shadow_copy

./: Cargo.toml  README.md  README.tpl  build.rs  errors.md
.github/workflows/: docs.yml
examples/: make-backup-snapshot.rs
src/: lib.rs  safe_com_component.rs  vsadmin.rs  vsbackup.rs  vsmgmt.rs  vsprov.rs  vss.rs  vswriter.rs
take-file-lock/: Cargo.toml
take-file-lock/src/: main.rs
