[package]
name = "volume_shadow_copy"
# When updating:
# - Generate README.md using `cargo readme --no-license > README.md`
version = "0.1.0"
authors = ["Lej77 <31554212+Lej77@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["Volume Shadow Copy Service", "VSS", "vsbackup.h", "backup"]
description = "Volume Shadow Copy Service API wrapper. Can be used to make a VSS \"requester\" that uses VSS to make or restore backups."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["vsbackup", "winerror", "vsserror", "winbase", "impl-default", "cguid", "combaseapi", "objbase"] }
bitflags = "1.2.1"
once_cell = "1.5.2"

# Use exact version of `winstr` since we rely on `repr(transparent)` layout guarantees for transmutes.
winstr = "=0.0.2"
widestring = "0.4.3"
